Fix spacing between chips with multiple rows. Rewrite styles for chips in tables so they are compatible and don't need the `!important` override. Fix the entire chip list getting outlined when clicking on a disabled chip.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,5 @@
+// Constants that the library uses, but are compiled away so we can't import them.
+// At least with by using this it is only one place to update if there are changes.
 $mat-fab-height: 56px;
 $mat-toolbar-height: 64px;
+$mat-chips-space-between: 8px;
